# opencv-ndk

./: .gitignore  AGENTS.md  CHANGELOG.md  MEMOIR.md  OCR_implement_plan.md  OCR_implement_task.md  README.md  SPEC.md  build.gradle  gradle.properties  local.properties  mapping.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/ocr/: README.md
app/src/main/cpp/: CMakeLists.txt  opencv-jni.cpp
app/src/main/java/com/example/opencvndk/: MainActivity.kt  OpenCVBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
reports/: OCR-20260602-deployment-rollback-assessment.md  OCR-20260602-deployment-runbook.md  OCR-20260602-device-log-run.md  OCR-20260602-field-checklist.md  OCR-20260602-implementation-start.md  OCR-20260602-permission-flow-static-check.md  OCR-20260602-preview-protection-device-checklist.md  OCR-20260602-preview-protection-static-check.md  OCR-20260602-quick-device-checklist.md  OCR-20260602-roi-gate-tuning.md  OCR-20260602-throttle-tuning.md  TEST-20260602-rotation-fix.md  TEST-20260602.md
scripts/: 01_init_env.sh  02_cmake_configure.sh  03_compile.sh  04_install.sh  05_deploy_to_app.sh  06_verify_ocr_assets.sh  07_download_ocr_models.sh  08_build_app_debug.sh  build_opencv_android.sh  run_all_stages.sh
